2002-04-03  Fred Kiefer <FredKiefer@gmx.de>

	* Document.m
	Added a horizontal ruler view in [makeWindow].
	* main.m
	Restructured all the menu creation. Release the delegate when no
	longer needed in [applicationDidFinishLaunching:]. 
	
Wed Feb 20 19:25:20 2002  Nicola Pero  <nicola@brainstorm.co.uk>

	Removed the memory panel, now available in the gui library
	for all applications.
	* GNUmakefile: Do not link to the memory panel classes; do
	not compile the memory panel.
	* main.m: Do not include MemoryPanel.h
	* main.m ([MyDelegate -applicationWillFinishLaunching:]): Do not
	add the memory panel submenu.  Click on the application icon in
	the info panel to get the memory panel now.
	
	* GNUmakefile (Ink_HEADERS): variable unused removed.

2001-12-09  Fred Kiefer <FredKiefer@gmx.de>

	* InkInfo.plist
	Added MIME types.
	* Ink.desktop
	New desktop link file generated with pl2link.
	
Mon Oct 22 16:48:19 2001  Nicola Pero  <nicola@brainstorm.co.uk>

	* Document.m ([Document -makeWindowControllers]): Fixed memory
	leak (Patch by Ludovic Marcotte <ludovi@Sophos.ca>).

Mon Oct 22 16:46:21 2001  Nicola Pero  <nicola@brainstorm.co.uk>

	* Document.m ([Document -makeWindow]): Reverted last change
	(Patch by Ludovic Marcotte <ludovi@Sohpos.ca>).

Thu Oct 18 15:11:08 2001  Nicola Pero  <nicola@brainstorm.co.uk>

	* Document.m ([Document -makeWindow]): Fixed memory leak 
	(Found by Ludovic Marcotte <ludovic@Sophos.ca>). 
